--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -63,6 +63,10 @@
     "# This is a function, which we will learn more about next week. For testing purposes, we will write our code in the function\n",
     "def anagram_checker(word_a, word_b):\n",
     "  # Your code here\n",
+    "  if (isinstance(word_a, str) and isinstance(word_b, str)):\n",
+    "    return sorted(word_a.lower()) == sorted(word_b.lower())\n",
+    "  else:\n",
+    "    return None\n",
     "\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Silent\", \"listen\")"
@@ -144,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
