--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -107,6 +107,13 @@
    "source": [
     "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
     "  # Modify your existing code here\n",
+    "  if (isinstance(word_a, str) and isinstance(word_b, str) and isinstance(is_case_sensitive, bool)):\n",
+    "    if (is_case_sensitive):\n",
+    "      return sorted(word_a) == sorted(word_b)\n",
+    "    else:\n",
+    "      return sorted(word_a.lower()) == sorted(word_b.lower())\n",
+    "  else:\n",
+    "    return None\n",
     "\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Silent\", \"listen\", False) # True"
