added checker for alphabetical characters

--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -64,6 +64,9 @@
     "def anagram_checker(word_a, word_b):\n",
     "  # Your code here\n",
     "  if (isinstance(word_a, str) and isinstance(word_b, str)):\n",
+    "    for char in set(word_a + word_b):\n",
+    "      if (not char.isalpha()):\n",
+    "        return None\n",
     "    return sorted(word_a.lower()) == sorted(word_b.lower())\n",
     "  else:\n",
     "    return None\n",
@@ -108,6 +111,8 @@
     "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
     "  # Modify your existing code here\n",
     "  if (isinstance(word_a, str) and isinstance(word_b, str) and isinstance(is_case_sensitive, bool)):\n",
+    "    if (not char.isalpha()):\n",
+    "        return None\n",
     "    if (is_case_sensitive):\n",
     "      return sorted(word_a) == sorted(word_b)\n",
     "    else:\n",
