--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -56,19 +56,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This is a function, which we will learn more about next week. For testing purposes, we will write our code in the function\n",
     "def anagram_checker(word_a, word_b):\n",
     "  # Your code here\n",
+    "  error_message = \"Invalid input\"\n",
+    "\n",
     "  if (isinstance(word_a, str) and isinstance(word_b, str)):\n",
+    "    \n",
     "    for char in set(word_a + word_b):\n",
     "      if (not char.isalpha()):\n",
+    "        print(error_message)\n",
     "        return None\n",
+    "      \n",
     "    return sorted(word_a.lower()) == sorted(word_b.lower())\n",
+    "\n",
     "  else:\n",
+    "    print(error_message)\n",
     "    return None\n",
     "\n",
     "# Run your code to check using the words below:\n",
@@ -77,18 +95,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"Silent\", \"Night\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"night\", \"Thing\")"
    ]
@@ -104,20 +144,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
     "  # Modify your existing code here\n",
+    "  error_message = \"Invalid input\"\n",
+    "\n",
     "  if (isinstance(word_a, str) and isinstance(word_b, str) and isinstance(is_case_sensitive, bool)):\n",
-    "    if (not char.isalpha()):\n",
+    "    \n",
+    "    for char in set(word_a + word_b):\n",
+    "      if (not char.isalpha()):\n",
+    "        print(error_message)\n",
     "        return None\n",
+    "      \n",
     "    if (is_case_sensitive):\n",
     "      return sorted(word_a) == sorted(word_b)\n",
     "    else:\n",
     "      return sorted(word_a.lower()) == sorted(word_b.lower())\n",
+    "    \n",
     "  else:\n",
+    "    print(error_message)\n",
     "    return None\n",
     "\n",
     "# Run your code to check using the words below:\n",
@@ -126,9 +185,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"Silent\", \"Listen\", True) # False"
    ]
