Fix detect_problems function

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -304,7 +304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 9,
       "metadata": {
         "id": "82-bk4CBB1w4"
       },
@@ -340,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "metadata": {
         "id": "3TYo0-1SDLrd"
       },
@@ -669,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 15,
       "metadata": {
         "id": "_svDiRkdIwiT"
       },
@@ -692,7 +692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 20,
       "metadata": {
         "id": "LEYPM5v4JT0i"
       },
@@ -702,14 +702,14 @@
         "\n",
         "def detect_problems(file_path):\n",
         "  #YOUR CODE HERE: use patient_summary() to get the means and check_zeros() to check for zeros in the means\n",
-        "  data_mean = patient_summary(all_paths[0], 'mean')\n",
+        "  data_mean = patient_summary(file_path, 'mean')\n",
         "\n",
         "  return (check_zeros(data_mean))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -719,15 +719,15 @@
             "False\n",
             "No problem in file ../../05_src/data/assignment_2_data/inflammation_01.csv: False\n",
             "No problem in file ../../05_src/data/assignment_2_data/inflammation_02.csv: False\n",
-            "No problem in file ../../05_src/data/assignment_2_data/inflammation_03.csv: False\n",
+            "Problem in file ../../05_src/data/assignment_2_data/inflammation_03.csv: True\n",
             "No problem in file ../../05_src/data/assignment_2_data/inflammation_04.csv: False\n",
             "No problem in file ../../05_src/data/assignment_2_data/inflammation_05.csv: False\n",
             "No problem in file ../../05_src/data/assignment_2_data/inflammation_06.csv: False\n",
             "No problem in file ../../05_src/data/assignment_2_data/inflammation_07.csv: False\n",
-            "No problem in file ../../05_src/data/assignment_2_data/inflammation_08.csv: False\n",
+            "Problem in file ../../05_src/data/assignment_2_data/inflammation_08.csv: True\n",
             "No problem in file ../../05_src/data/assignment_2_data/inflammation_09.csv: False\n",
             "No problem in file ../../05_src/data/assignment_2_data/inflammation_10.csv: False\n",
-            "No problem in file ../../05_src/data/assignment_2_data/inflammation_11.csv: False\n",
+            "Problem in file ../../05_src/data/assignment_2_data/inflammation_11.csv: True\n",
             "No problem in file ../../05_src/data/assignment_2_data/inflammation_12.csv: False\n"
           ]
         }
